@@ -121,7 +121,7 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 2, 4, "final", 1)
-__version_time__ = "26 Mar 2025 05:16 UTC"
+__version_time__ = "05 Apr 2025 07:28 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
